Add recipe in doc api
